--- a/components/card/card.module.scss
+++ b/components/card/card.module.scss
@@ -1,3 +1,28 @@
-.text {
-  color: red;
+.card {
+  width: 18%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid black;  
+  margin: 1px;
+  min-width: 100px;
+  max-width: 200px;
+  position: relative;
+  cursor: pointer;
+
+  &:hover {
+    font-size: 1.2rem;
+  }
+
+  &__text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+  }
+
+  &__clicked {
+    pointer-events: none;
+  }
 }
