--- a/components/card/card.module.scss
+++ b/components/card/card.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/partials/mixins';
+
 .card {
   width: 18%;
   height: 100px;
@@ -11,18 +13,17 @@
   position: relative;
   cursor: pointer;
 
-  &:hover {
-    font-size: 1.2rem;
-  }
+  &--blue { @include cardColor(blue) }
+  &--red { @include cardColor(red) }
+  &--black { @include cardColor(black) }
+  &--neutral { @include cardColor(burlywood) }
+  &--clicked { pointer-events: none }
+  &:hover { font-size: 1.2rem }
 
   &__text {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-  }
-
-  &__clicked {
-    pointer-events: none;
   }
 }
