--- a/components/card/card.module.scss
+++ b/components/card/card.module.scss
@@ -6,22 +6,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid black;  
-  margin: 1px;
+  margin: 2px;
   min-width: 100px;
   max-width: 200px;
   position: relative;
   cursor: pointer;
+  perspective: 1000px;
 
-  &--blue { @include cardColor(blue) }
-  &--red { @include cardColor(red) }
-  &--black { @include cardColor(black) }
-  &--neutral { @include cardColor(burlywood) }
-  &--disabled { pointer-events: none }
-  &--blue-border { border-color: blue }
-  &--red-border { border-color: red }
-  &--black-border { border-color: black }
-  &--neutral-border { border-color: burlywood }
   &:hover { font-size: 1.2rem }
 
   &__text {
@@ -29,5 +20,40 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+  }
+
+  &__inner {
+    border: 1px solid black;  
+    perspective: 1000px;
+    height: 100%;
+    width: 100%;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+
+    &--disabled { pointer-events: none }
+    &--blue-border { border-color: blue }
+    &--red-border { border-color: red }
+    &--black-border { border-color: black }
+    &--neutral-border { border-color: burlywood }
+    &--flipped { transform: rotateY(180deg) }
+  }
+  
+  &__front,
+  &__back {
+    height: 100%;
+    width: 100%;
+  }
+
+  &__back {
+    position: absolute;
+    top: 0;
+    left: 0;
+    backface-visibility: hidden;
+    transform: rotateY(180deg);
+
+    &--blue { @include cardColor(blue) }
+    &--red { @include cardColor(red) }
+    &--black { @include cardColor(black) }
+    &--neutral { @include cardColor(burlywood) }
   }
 }
